# Travliaq-Agents

./: .env.example  .gitignore  ANALYSE_CONTRADICTIONS_CRITIQUES.md  CORRECTIONS_BUG_PHASE3.md  DATE_VALIDATION_ANALYSIS.md  Dockerfile  IMPLEMENTATION_READY_CODE.py  NOUVELLE_ARCHITECTURE_PIPELINE.md  OPTIMISATIONS_ANTI_HALLUCINATION.md  PATCH_PIPELINE.md  PLAN_INCREMENTAL_BUILDER.md  PLAN_REVISION_AGENTS_TASKS.md  PR_DESCRIPTION.md  QUICK_FIX_SUMMARY.md  RAILWAY_DEPLOYMENT.md  README.md  REFACTORING_PROGRESS.md  REFONTE_COMPLETE.md  crew_pipeline_cli.py  debug_mcp.py  debug_mcp_post.py  debug_mcp_session.py  debug_segfault.py  example_test_logging.py  inspect_mcp.py  logLastPipeline.txt  pyproject.toml  reproduce_date_issue.py  reproduce_double_encoding.py  requirements.txt  run.py  run_pipeline.sh  run_with_monitoring.py  test_all_mcp_tools_draft.py  test_fixes.py  test_geo_text_to_place.py  test_images_tools_manual.py  test_local_mcp.py  test_mcp_connection.py  test_mcp_integration.py  (+1 more)
app/: config.py
docs/: PIPELINE_USE_CASES.md
documentation/: PIPELINE_ARCHITECTURE.md  PIPELINE_COMPLETE.md  agent_pipeline_analysis.md  pipeline.md  trip_agents_tooling_plan.md  trip_generation_workflow.md
examples/: README.md  test_pipeline.py  traveller_persona_input.json.example
tests/: conftest.py  test_api.py  test_country_context_service.py  test_crew_pipeline_cli.py  test_date_format_parsing.py  test_date_injection.py  test_date_validation.py  test_image_generator_refactor.py  test_logging_system.py  test_mcp_tools.py  test_models.py  test_pipeline_characterization.py  (+1 more)
(+47 files in other folders)
